--- a/chi-siamo.html
+++ b/chi-siamo.html
@@ -6,7 +6,7 @@
   <meta charset="utf-8">
   <meta name="viewport" width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0>
   <link rel="stylesheet" type="text/css" href="style.css">
-
+  <base href="/tabum">
   <script type="text/javascript" src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
 
   <script src="gsap-public/minified/gsap.min.js"></script>
