--- a/chi-siamo.html
+++ b/chi-siamo.html
@@ -8,9 +8,9 @@
   <base href="https://f-invidia98.github.io/tabum/">
   <link rel="stylesheet" type="text/css" href="style.css">
 
-  <script type="text/javascript" src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/plugins/animation.gsap.js"></script>
-  <script src="gsap-public/minified/gsap.min.js"></script>
+  <script type="text/javascript" src="/tabumhttps://code.jquery.com/jquery-3.4.1.min.js"></script>
+  <script src="/tabumhttps://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/plugins/animation.gsap.js"></script>
+  <script src="/tabumgsap-public/minified/gsap.min.js"></script>
   <script src="//cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/ScrollMagic.min.js"></script>
   <script src="//cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/plugins/debug.addIndicators.min.js"></script>
 
@@ -70,7 +70,7 @@
 
 
       <div class="immagine_1 reveal">
-        <img src="/immagini/Olivia.png">
+        <img src="/tabum/immagini/Olivia.png">
       </div>
 
 
@@ -130,14 +130,14 @@
           <div class="scroll-personaggi">
 
             <div class="big-pers">
-              <img src="/immagini/Martino saluta.png">
+              <img src="/tabum/immagini/Martino saluta.png">
             </div>
             <div class="text-pers very_little">
               questo è un bel testo
             </div>
 
             <div class="big-pers">
-              <img src="/immagini/Olivia saluta.png">
+              <img src="/tabum/immagini/Olivia saluta.png">
             </div>
 
             <div class="text-pers very_little">
@@ -145,7 +145,7 @@
             </div>
 
             <div class="big-pers">
-              <img src="/immagini/Edo saluta.png">
+              <img src="/tabum/immagini/Edo saluta.png">
             </div>
 
             <div class="text-pers very_little">
@@ -172,11 +172,11 @@
     </div>
 
     <div class="box-logo">
-      <img src="/immagini/logo/logo_ta.png">
+      <img src="/tabum/immagini/logo/logo_ta.png">
       <div class="text-pers very_little">
         questo è un bel testo
       </div>
-      <img src="/immagini/logo/logo_bum.png">
+      <img src="/tabum/immagini/logo/logo_bum.png">
       <div class="text-pers very_little">
         questo è un bel testo
       </div>
@@ -184,15 +184,15 @@
 
   </div> -->
 
-  <img class="contatti_img" src="/immagini/prato fondale sito.png">
+  <img class="contatti_img" src="/tabum/immagini/prato fondale sito.png">
 
   <div class="contatti">
     <div class="">
 
     </div>
-    <img class="facebook" src="/immagini/contatti/facebook.png">
-    <img class="mail" src="/immagini/contatti/mail.png">
-    <img class="insta" src="/immagini/contatti/insta.png">
+    <img class="facebook" src="/tabum/immagini/contatti/facebook.png">
+    <img class="mail" src="/tabum/immagini/contatti/mail.png">
+    <img class="insta" src="/tabum/immagini/contatti/insta.png">
     <div class="">
       taBùm editore <br> Via G. Candiani, 72 <br>20158, Milano, MI
     </div>
@@ -201,7 +201,7 @@
 
 
   <!-- <div class="prova-cont">
-    <img src="mail.png">
+    <img src="/tabummail.png">
   </div> -->
 
   <div id="nav-placeholder">
@@ -228,7 +228,7 @@
   </svg>
 
 
-  <script type="text/javascript" src="script.js"></script>
+  <script type="text/javascript" src="/tabum/script.js"></script>
 
 </body>
 
