--- a/chi-siamo.html
+++ b/chi-siamo.html
@@ -33,7 +33,7 @@
   <script type="text/javascript">
   $(window).on('load resize',function(){
       if($(window).width() < 950){
-          window.location = "/chi-siamo-mobile.html"
+          window.location = "chi-siamo-mobile.html"
       }
   });
   </script>
