--- a/chi-siamo-mobile.html
+++ b/chi-siamo-mobile.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  
+
 
   <link rel="stylesheet" type="text/css" href="style-mobile.css">
   <script type="text/javascript" src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
@@ -116,7 +116,7 @@
          Olivia
        </div>
         <div class="mobile-flex">
-          <img src="/immagini/Martino saluta.png">
+          <img src="immagini/Martino saluta.png">
           <div class="text-pers very_little path3">
            questo è un bel testo
          </div>
@@ -130,7 +130,7 @@
             <div class="text-pers very_little path3">
              questo è un bel testo
            </div>
-            <img src="/immagini/Olivia saluta.png">
+            <img src="immagini/Olivia saluta.png">
 
           </div>
 
@@ -139,7 +139,7 @@
            Olivia
          </div>
           <div class="mobile-flex">
-            <img src="/immagini/Edo saluta.png">
+            <img src="immagini/Edo saluta.png">
             <div class="text-pers very_little path3">
              questo è un bel testo
            </div>
@@ -171,15 +171,15 @@
 
   </div>
 
-    <img class="contatti_img" src="/immagini/prato fondale sito.png">
+    <img class="contatti_img" src="immagini/prato fondale sito.png">
 
     <div class="contatti">
       <div class="">
 
       </div>
-      <img class="facebook" src="/immagini/contatti/facebook.png">
-      <img class="mail" src="/immagini/contatti/mail.png">
-      <img class="insta" src="/immagini/contatti/insta.png">
+      <img class="facebook" src="immagini/contatti/facebook.png">
+      <img class="mail" src="immagini/contatti/mail.png">
+      <img class="insta" src="immagini/contatti/insta.png">
       <div class="">
         taBùm editore <br> Via G. Candiani, 72 <br>20158, Milano, MI
       </div>
