--- a/chi-siamo-mobile.html
+++ b/chi-siamo-mobile.html
@@ -29,7 +29,7 @@
   <script type="text/javascript">
   $(window).on('load resize',function(){
       if($(window).width() > 950){
-          window.location = "/catalogo.html"
+          window.location = "/chi-siamo.html"
       }
   });
   </script>
