--- a/tabu.html
+++ b/tabu.html
@@ -2,16 +2,19 @@
 <html>
 
 <head>
+
   <meta charset="utf-8">
   <meta name="viewport" width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0>
-  <link rel="stylesheet" type="text/css" href="style.css">
+
+
+  <script src="tabum/gsap-public/minified/gsap.min.js"></script>
   <script type="text/javascript" src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
-  <script src="gsap-public/minified/gsap.min.js"></script>
+
+
   <script src="//cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/ScrollMagic.min.js"></script>
   <script src="//cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/plugins/debug.addIndicators.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/plugins/animation.gsap.js"></script>
-
-  <script src="http://cdnjs.cloudflare.com/ajax/libs/gsap/1.14.2/TweenMax.min.js"></script>
+  <link rel="stylesheet" type="text/css" href="style.css">
 
 
   <style>
@@ -39,7 +42,7 @@
 
       <defs>
         <pattern id="image1" patternUnits="objectBoundingBox" width="1" height="1" x="0" y="0" preserveAspectRatio="xMidYMid slice">
-          <image width="100%" height="100%" xlink:href="/immagini/distintivi/distintivo morte.png">
+          <image width="100%" height="100%" xlink:href="immagini/distintivi/distintivo morte.png">
         </pattern>
       </defs>
 
@@ -96,7 +99,7 @@
       <a href="#">
         <path class="teal" d="M 96 81 L 88 105 L 51 98 L 58 64 L 93 69 Z" preserveAspectRatio="none" fill="#442675" />
       </a>
-      <!-- <img src="/immagini/distintivi/distintivo morte.png" class="img_distintivi"> -->
+      <!-- <img src="immagini/distintivi/distintivo morte.png" class="img_distintivi"> -->
 
       <!-- <path class="teal" d="M3, 35 46, 5 47, 30 40, 48 27, 50z" fill="white" /> -->
       <!-- <path class="teal"
@@ -108,19 +111,19 @@
 
 
       <a href="#morte">
-        <image width="12%" xlink:href="/immagini/distintivi/distintivo morte.png" x="25%" y="20%" /> </a>
+        <image width="12%" xlink:href="immagini/distintivi/distintivo morte.png" x="25%" y="20%" /> </a>
       <a href="#mestruazioni">
-        <image width="12%" xlink:href="/immagini/distintivi/distintivo mestruazioni.png" x="63%" y="18%" /></a>
+        <image width="12%" xlink:href="immagini/distintivi/distintivo mestruazioni.png" x="63%" y="18%" /></a>
       <a href="#gender">
-        <image width="12%" xlink:href="/immagini/distintivi/distintivo gender.png" x="46%" y="35.5%" /></a>
+        <image width="12%" xlink:href="immagini/distintivi/distintivo gender.png" x="46%" y="35.5%" /></a>
       <a href="#psicologo">
-        <image width="12%" xlink:href="/immagini/distintivi/distintivo psicologo.png" x="8%" y="54%" /></a>
+        <image width="12%" xlink:href="immagini/distintivi/distintivo psicologo.png" x="8%" y="54%" /></a>
       <a href="#abusi">
-        <image width="12%" xlink:href="/immagini/distintivi/distintivo abusi.png" x="31%" y="65%" /></a>
+        <image width="12%" xlink:href="immagini/distintivi/distintivo abusi.png" x="31%" y="65%" /></a>
       <a href="#droga">
-        <image width="12%" xlink:href="/immagini/distintivi/distintivo droga.png" x="55%" y="64%" /></a>
+        <image width="12%" xlink:href="immagini/distintivi/distintivo droga.png" x="55%" y="64%" /></a>
       <a href="#sesso">
-        <image width="12%" xlink:href="/immagini/distintivi/distintivo sesso.png" x="78%" y="50%" /></a>
+        <image width="12%" xlink:href="immagini/distintivi/distintivo sesso.png" x="78%" y="50%" /></a>
     </svg>
 
     <!-- <svg version="1.1" viewbox="0 0 100 100">
@@ -128,7 +131,7 @@
 
     <defs>
       <pattern id="image1" patternUnits="objectBoundingBox" width="100%" height="100%" preserveAspectRatio="xMidYMid slice" x="50%" y="50%">
-        <image  width="20" height="20"  xlink:href="/immagini/distintivi/distintivo morte.png">
+        <image  width="20" height="20"  xlink:href="immagini/distintivi/distintivo morte.png">
       </pattern>
     </defs>
 
@@ -146,7 +149,7 @@
 
     <div id="morte" class="schedaLibro">
       <div class="distintivo">
-        <img src="/immagini/distintivi/distintivo morte.png">
+        <img src="immagini/distintivi/distintivo morte.png">
       </div>
       <div class="title little black reveal">
         Morte
@@ -159,7 +162,7 @@
 
         </div>
 
-        <img class="immagine_2" src="/immagini/Olivia.png">
+        <img class="immagine_2" src="immagini/Olivia.png">
 
       </div>
 
@@ -270,7 +273,7 @@
 
 
       <div class="immagine_libro reveal">
-        <img src="/immagini/mockup/mockup_martino_2.png">
+        <img src="immagini/mockup/mockup_martino_2.png">
 
       </div>
 
@@ -282,7 +285,7 @@
     </div>
     <div id="mestruazioni" class="schedaLibro">
       <div class="distintivo">
-        <img src="/immagini/distintivi/distintivo mestruazioni.png">
+        <img src="immagini/distintivi/distintivo mestruazioni.png">
       </div>
       <div class="title little black reveal">
         Mestruazioni
@@ -295,7 +298,7 @@
 
         </div>
 
-        <img class="immagine_2" src="/immagini/Olivia.png">
+        <img class="immagine_2" src="immagini/Olivia.png">
 
       </div>
 
@@ -410,7 +413,7 @@
 
 
       <div class="immagine_libro reveal">
-        <img src="/immagini/mockup/mockup_martino_3.png">
+        <img src="immagini/mockup/mockup_martino_3.png">
 
       </div>
 
@@ -418,7 +421,7 @@
     </div>
     <div id="gender" class="schedaLibro">
       <div class="distintivo">
-        <img src="/immagini/distintivi/distintivo gender.png">
+        <img src="immagini/distintivi/distintivo gender.png">
       </div>
       <div class="title little black reveal">
         Omosessualità
@@ -431,7 +434,7 @@
 
         </div>
 
-        <img class="immagine_2" src="/immagini/Olivia.png">
+        <img class="immagine_2" src="immagini/Olivia.png">
 
       </div>
 
@@ -541,7 +544,7 @@
 
 
       <div class="immagine_libro reveal">
-        <img src="/immagini/mockup/mockup_martino_2.png">
+        <img src="immagini/mockup/mockup_martino_2.png">
 
       </div>
 
@@ -557,7 +560,7 @@
     </div>
     <div id="psicologo" class="schedaLibro">
       <div class="distintivo">
-        <img src="/immagini/distintivi/distintivo psicologo.png">
+        <img src="immagini/distintivi/distintivo psicologo.png">
       </div>
       <div class="title little black reveal">
         Psicologo
@@ -570,7 +573,7 @@
 
         </div>
 
-        <img class="immagine_2" src="/immagini/Olivia.png">
+        <img class="immagine_2" src="immagini/Olivia.png">
 
       </div>
 
@@ -682,7 +685,7 @@
 
 
       <div class="immagine_libro reveal">
-        <img src="/immagini/mockup/mockup_martino_4.png">
+        <img src="immagini/mockup/mockup_martino_4.png">
 
       </div>
 
@@ -693,7 +696,7 @@
     </div>
     <div id="abusi" class="schedaLibro">
       <div class="distintivo">
-        <img src="/immagini/distintivi/distintivo abusi.png">
+        <img src="immagini/distintivi/distintivo abusi.png">
       </div>
       <div class="title little black reveal">
         Abusi
@@ -706,7 +709,7 @@
 
         </div>
 
-        <img class="immagine_2" src="/immagini/Olivia.png">
+        <img class="immagine_2" src="immagini/Olivia.png">
 
       </div>
 
@@ -816,7 +819,7 @@
 
 
       <div class="immagine_libro reveal">
-        <img src="/immagini/mockup/mockup_martino_1.png">
+        <img src="immagini/mockup/mockup_martino_1.png">
 
       </div>
 
@@ -832,7 +835,7 @@
     </div>
     <div id="droga" class="schedaLibro">
       <div class="distintivo">
-        <img src="/immagini/distintivi/distintivo droga.png">
+        <img src="immagini/distintivi/distintivo droga.png">
       </div>
       <div class="title little black reveal">
         Droga
@@ -845,7 +848,7 @@
 
         </div>
 
-        <img class="immagine_2" src="/immagini/Olivia.png">
+        <img class="immagine_2" src="immagini/Olivia.png">
 
       </div>
 
@@ -955,7 +958,7 @@
 
 
       <div class="immagine_libro reveal">
-        <img src="/immagini/mockup/mockup_martino_4.png">
+        <img src="immagini/mockup/mockup_martino_4.png">
 
       </div>
 
@@ -971,7 +974,7 @@
     </div>
     <div id="sesso" class="schedaLibro">
       <div class="distintivo">
-        <img src="/immagini/distintivi/distintivo sesso.png">
+        <img src="immagini/distintivi/distintivo sesso.png">
       </div>
       <div class="title little black reveal">
         Sesso
@@ -984,7 +987,7 @@
 
         </div>
 
-        <img class="immagine_2" src="/immagini/Olivia.png">
+        <img class="immagine_2" src="immagini/Olivia.png">
 
       </div>
 
@@ -1094,7 +1097,7 @@
 
 
       <div class="immagine_libro reveal">
-        <img src="/immagini/mockup/mockup_martino_3.png">
+        <img src="immagini/mockup/mockup_martino_3.png">
 
       </div>
 
@@ -1110,14 +1113,14 @@
     </div>
 
 
-    <img class="contatti_img hide" src="/immagini/prato fondale sito2.png">
+    <img class="contatti_img hide" src="immagini/prato fondale sito2.png">
     <div class="contatti hide">
       <div class="">
 
       </div>
-      <img class="facebook" src="/immagini/contatti/facebook.png">
-      <img class="mail" src="/immagini/contatti/mail.png">
-      <img class="insta" src="/immagini/contatti/insta.png">
+      <img class="facebook" src="immagini/contatti/facebook.png">
+      <img class="mail" src="immagini/contatti/mail.png">
+      <img class="insta" src="immagini/contatti/insta.png">
       <div class="">
         taBùm editore <br> Via G. Candiani, 72 <br>20158, Milano, MI
       </div>
