--- a/catalogo-mobile.html
+++ b/catalogo-mobile.html
@@ -2,20 +2,19 @@
 <html>
 
 <head>
-  <meta charset="utf-8">
 
-  <link rel="stylesheet" type="text/css" href="style-mobile.css">
+  <meta charset="utf-8">
+  <meta name="viewport" width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0>
+
+
+  <script src="tabum/gsap-public/minified/gsap.min.js"></script>
   <script type="text/javascript" src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
 
-  <script src="gsap-public/minified/gsap.min.js"></script>
+
   <script src="//cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/ScrollMagic.min.js"></script>
   <script src="//cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/plugins/debug.addIndicators.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/plugins/animation.gsap.js"></script>
-
-  <link rel="stylesheet" href="https://unpkg.com/freezeframe@3.0.10/build/css/freezeframe_styles.min.css">
-  <script type="text/javascript" src="https://unpkg.com/freezeframe@3.0.10/build/js/freezeframe.pkgd.min.js"></script>
-
-  <script src="http://cdnjs.cloudflare.com/ajax/libs/gsap/1.14.2/TweenMax.min.js"></script>
+  <link rel="stylesheet" type="text/css" href="style.css">
 
 
   <style>
@@ -60,16 +59,16 @@
       <div class="copertine_container">
         <div class="testi">
           <a class="copertina" href="#scheda_libro">
-            <img src="/immagini/copertina1.png">
+            <img src="immagini/copertina1.png">
           </a>
           <a class="copertina" href="#scheda_libro">
-            <img src="/immagini/copertina2.png">
+            <img src="immagini/copertina2.png">
           </a>
           <a class="copertina" href="#scheda_libro">
-            <img src="/immagini/copertina3.png">
+            <img src="immagini/copertina3.png">
           </a>
           <a class="copertina" href="#scheda_libro">
-            <img src="/immagini/copertina4.png">
+            <img src="immagini/copertina4.png">
           </a>
         </div>
       </div>
@@ -97,7 +96,7 @@
 
           </div>
           <div class="mockup">
-            <img src="/immagini/mockup/mockup_martino_1.png">
+            <img src="immagini/mockup/mockup_martino_1.png">
 
           </div>
           <div class="title little black">
@@ -135,7 +134,7 @@
 
           </div>
           <div class="mockup">
-            <img src="/immagini/mockup/mockup_martino_1.png">
+            <img src="immagini/mockup/mockup_martino_1.png">
 
           </div>
           <div class="title little black">
@@ -173,7 +172,7 @@
 
           </div>
           <div class="mockup">
-            <img src="/immagini/mockup/mockup_martino_1.png">
+            <img src="immagini/mockup/mockup_martino_1.png">
 
           </div>
           <div class="title little black">
@@ -211,7 +210,7 @@
 
           </div>
           <div class="mockup">
-            <img src="/immagini/mockup/mockup_martino_1.png">
+            <img src="immagini/mockup/mockup_martino_1.png">
 
           </div>
           <div class="title little black">
@@ -245,11 +244,11 @@
     <div class="prova-cont" style="display: none;">
 
 
-    <img class="contatti_img" src="/immagini/prato fondale sito2.png" />
+    <img class="contatti_img" src="immagini/prato fondale sito2.png" />
 
     <div class="contatti">
-      <img class="facebook" src="/immagini/contatti/facebook.png" />
-      <img class="mail" src="/immagini/contatti/mail.png" />
+      <img class="facebook" src="immagini/contatti/facebook.png" />
+      <img class="mail" src="immagini/contatti/mail.png" />
       <div class="">
         taBùm editore <br> Via G. Candiani, 72 <br>20158, Milano, MI
       </div>
@@ -262,11 +261,11 @@
   <!-- <div class="prova-cont" style="display: none;">
 
 
-  <img class="contatti_img" src="/immagini/prato fondale sito2.png" />
+  <img class="contatti_img" src="immagini/prato fondale sito2.png" />
 
   <div class="contatti">
-    <img class="facebook" src="/immagini/contatti/facebook.png" />
-    <img class="mail" src="/immagini/contatti/mail.png" />
+    <img class="facebook" src="immagini/contatti/facebook.png" />
+    <img class="mail" src="immagini/contatti/mail.png" />
     <div class="">
       taBùm editore <br> Via G. Candiani, 72 <br>20158, Milano, MI
     </div>
@@ -298,12 +297,12 @@
   <div class="prova-cont">
 
 
-  <img class="contatti_img" src="/immagini/prato fondale sito2.png" />
+  <img class="contatti_img" src="immagini/prato fondale sito2.png" />
 
   <div class="contatti">
-    <img class="facebook" src="/immagini/contatti/facebook.png" />
-    <img class="mail" src="/immagini/contatti/mail.png" />
-    <img class="insta" src="/immagini/contatti/insta.png" />
+    <img class="facebook" src="immagini/contatti/facebook.png" />
+    <img class="mail" src="immagini/contatti/mail.png" />
+    <img class="insta" src="immagini/contatti/insta.png" />
     <div class="">
       taBùm editore <br> Via G. Candiani, 72 <br>20158, Milano, MI
     </div>
