--- a/catalogo.html
+++ b/catalogo.html
@@ -2,16 +2,19 @@
 <html>
 
 <head>
+
   <meta charset="utf-8">
   <meta name="viewport" width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0>
-  <link rel="stylesheet" type="text/css" href="style.css">
+
+
+  <script src="tabum/gsap-public/minified/gsap.min.js"></script>
   <script type="text/javascript" src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
-  <script src="gsap-public/minified/gsap.min.js"></script>
+
+
   <script src="//cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/ScrollMagic.min.js"></script>
   <script src="//cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/plugins/debug.addIndicators.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/plugins/animation.gsap.js"></script>
-
-  <script src="http://cdnjs.cloudflare.com/ajax/libs/gsap/1.14.2/TweenMax.min.js"></script>
+  <link rel="stylesheet" type="text/css" href="style.css">
 
 
   <style>
@@ -47,16 +50,16 @@
 
       <div class="copertine_container">
         <a class="copertina" href="#scheda_libro">
-          <img src="/immagini/copertina1.png">
+          <img src="immagini/copertina1.png">
         </a>
         <a class="copertina" href="#scheda_libro">
-          <img src="/immagini/copertina2.png">
+          <img src="immagini/copertina2.png">
         </a>
         <a class="copertina" href="#scheda_libro">
-          <img src="/immagini/copertina3.png">
+          <img src="immagini/copertina3.png">
         </a>
         <a class="copertina" href="#scheda_libro">
-          <img src="/immagini/copertina4.png">
+          <img src="immagini/copertina4.png">
         </a>
       </div>
     </div>
@@ -68,7 +71,7 @@
         <div class="scheda_container">
           <div class="mockup" style="width:63%;">
           <video width="100%" controls>
-            <source src="/immagini/video_morte.mp4" type="video/mp4">
+            <source src="immagini/video_morte.mp4" type="video/mp4">
           </video>
 
           </div>
@@ -110,7 +113,7 @@
 
           </div>
           <div class="mockup">
-            <img src="/immagini/mockup_martino_2.png">
+            <img src="immagini/mockup_martino_2.png">
 
           </div>
         </div>
@@ -145,7 +148,7 @@
 
           </div>
           <div class="mockup">
-            <img src="/immagini/mockup_martino_3.png">
+            <img src="immagini/mockup_martino_3.png">
 
           </div>
         </div>
@@ -180,7 +183,7 @@
 
           </div>
           <div class="mockup">
-            <img src="/immagini/mockup_martino_4.png">
+            <img src="immagini/mockup_martino_4.png">
 
           </div>
         </div>
@@ -206,14 +209,14 @@
 
     </div>
 
-      <img class="contatti_img hide" src="/immagini/prato fondale sito2.png">
+      <img class="contatti_img hide" src="immagini/prato fondale sito2.png">
     <div class="contatti hide">
       <div class="">
 
       </div>
-      <img class="facebook" src="/immagini/contatti/facebook.png" />
-      <img class="mail" src="/immagini/contatti/mail.png" />
-      <img class="insta" src="/immagini/contatti/insta.png" />
+      <img class="facebook" src="immagini/contatti/facebook.png" />
+      <img class="mail" src="immagini/contatti/mail.png" />
+      <img class="insta" src="immagini/contatti/insta.png" />
       <div class="">
         taBùm editore <br> Via G. Candiani, 72 <br>20158, Milano, MI
       </div>
