--- a/tabu-mobile.html
+++ b/tabu-mobile.html
@@ -2,20 +2,19 @@
 <html>
 
 <head>
-  <meta charset="utf-8">
 
-  <link rel="stylesheet" type="text/css" href="style-mobile.css">
+  <meta charset="utf-8">
+  <meta name="viewport" width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0>
+
+
+  <script src="tabum/gsap-public/minified/gsap.min.js"></script>
   <script type="text/javascript" src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
 
-  <script src="gsap-public/minified/gsap.min.js"></script>
+
   <script src="//cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/ScrollMagic.min.js"></script>
   <script src="//cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/plugins/debug.addIndicators.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/plugins/animation.gsap.js"></script>
-
-  <link rel="stylesheet" href="https://unpkg.com/freezeframe@3.0.10/build/css/freezeframe_styles.min.css">
-  <script type="text/javascript" src="https://unpkg.com/freezeframe@3.0.10/build/js/freezeframe.pkgd.min.js"></script>
-
-  <script src="http://cdnjs.cloudflare.com/ajax/libs/gsap/1.14.2/TweenMax.min.js"></script>
+  <link rel="stylesheet" type="text/css" href="style.css">
 
 
   <style>
@@ -47,13 +46,13 @@
     <!-- TITOLO -->
 <div class="tabu_box_1">
 
-  <img src="/immagini/distintivi/distintivo morte.png" alt="">
-  <img src="/immagini/distintivi/distintivo gender.png" alt="">
-  <img src="/immagini/distintivi/distintivo mestruazioni.png" alt="">
-  <img src="/immagini/distintivi/distintivo psicologo.png" alt="">
-  <img src="/immagini/distintivi/distintivo droga.png" alt="">
-  <img src="/immagini/distintivi/distintivo abusi.png" alt="">
-  <img src="/immagini/distintivi/distintivo sesso.png" alt="">
+  <img src="immagini/distintivi/distintivo morte.png" alt="">
+  <img src="immagini/distintivi/distintivo gender.png" alt="">
+  <img src="immagini/distintivi/distintivo mestruazioni.png" alt="">
+  <img src="immagini/distintivi/distintivo psicologo.png" alt="">
+  <img src="immagini/distintivi/distintivo droga.png" alt="">
+  <img src="immagini/distintivi/distintivo abusi.png" alt="">
+  <img src="immagini/distintivi/distintivo sesso.png" alt="">
 
 
 </div>
