--- a/nav-mobile.html
+++ b/nav-mobile.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <!-- <a href="./index.html">
 <div class="thome">
-  <img src="/immagini/tasto_home.png">
+  <img src="immagini/tasto_home.png">
 </div>
 </a> -->
 
 
-<a href="./index.html">
+<a href="index.html">
 
-<img class="tmenu_verse" src="/immagini/tasto_menu.png">
+<img class="tmenu_verse" src="immagini/tasto_menu.png">
 </a>
 <!--
   <div class="botton1">
