--- a/index.html
+++ b/index.html
@@ -2,19 +2,19 @@
 <html>
 
 <head>
+
   <meta charset="utf-8">
   <meta name="viewport" width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0>
-  <link rel="stylesheet" type="text/css" href="style.css">
-  <script type="text/javascript" src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+
+
   <script src="gsap-public/minified/gsap.min.js"></script>
+  <script type="text/javascript" src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+  <script src="//cdnjs.cloudflare.com/ajax/libs/gsap/1.14.2/TweenMax.min.js"></script>
+
   <script src="//cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/ScrollMagic.min.js"></script>
   <script src="//cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/plugins/debug.addIndicators.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/plugins/animation.gsap.js"></script>
-
-  <link rel="stylesheet" href="https://unpkg.com/freezeframe@3.0.10/build/css/freezeframe_styles.min.css">
-  <script type="text/javascript" src="https://unpkg.com/freezeframe@3.0.10/build/js/freezeframe.pkgd.min.js"></script>
-
-  <script src="http://cdnjs.cloudflare.com/ajax/libs/gsap/1.14.2/TweenMax.min.js"></script>
+  <link rel="stylesheet" type="text/css" href="style.css">
 
 
   <style>
@@ -36,14 +36,14 @@
 <body style="background-image:none;" onload="setTimeout('redirect()', 300)">
 
   <div class="home_container">
-    <img class="cielo" src="/immagini/03b cielo.png">
-    <img class="prato" src="/immagini/03b bimbi e prato grande.png">
+    <img class="cielo" src="immagini/03b cielo.png">
+    <img class="prato" src="immagini/03b bimbi e prato grande.png">
 
 
     <!-- TABUM -->
 
     <div class="logo reveal">
-        <img src="/immagini/logo/logo.png">
+        <img src="immagini/logo/logo.png">
     </div>
 
     <!-- PRIMO BLOCCO DI TESTO -->
@@ -53,19 +53,19 @@
         <div class="text-pers-2 little path3">
           taBùM?!?
         </div>
-          <!-- <img src="/immagini/Olivia saluta.png"> -->
+          <!-- <img src="immagini/Olivia saluta.png"> -->
       </a>
       <a href="/tabu.html" class="tasti_home">
         <div class="text-pers-2 little path3">
           Quali tabù?
         </div>
-          <!-- <img src="/immagini/Martino saluta.png"> -->
+          <!-- <img src="immagini/Martino saluta.png"> -->
       </a>
       <a href="/catalogo.html" class="tasti_home">
         <div class="text-pers-2 little path3">
           ...e i libri?
         </div>
-          <!-- <img src="/immagini/Edo saluta.png"> -->
+          <!-- <img src="immagini/Edo saluta.png"> -->
       </a>
 
 
