--- a/index-mobile.html
+++ b/index-mobile.html
@@ -44,19 +44,19 @@
 
     <div class="home">
 
-      <a href="/chi-siamo.html" class="tasti_home">
+      <a href="chi-siamo.html" class="tasti_home">
         <div class="text-pers-2 little path3">
           taBùM?!?
         </div>
           <!-- <img src="immagini/Olivia saluta.png"> -->
       </a>
-      <a href="/tabu.html" class="tasti_home">
+      <a href="tabu.html" class="tasti_home">
         <div class="text-pers-2 little path3">
           Quali tabù?
         </div>
           <!-- <img src="immagini/Martino saluta.png"> -->
       </a>
-      <a href="/catalogo.html" class="tasti_home">
+      <a href="catalogo.html" class="tasti_home">
         <div class="text-pers-2 little path3">
           ...e i libri?
         </div>
