--- a/catalogo-mobile.html
+++ b/catalogo-mobile.html
@@ -32,7 +32,7 @@
   <script type="text/javascript">
   $(window).on('load resize',function(){
       if($(window).width() > 950){
-          window.location = "/catalogo.html"
+          window.location = "catalogo.html"
       }
   });
   </script>
