--- a/catalogo.html
+++ b/catalogo.html
@@ -27,7 +27,7 @@
   <script type="text/javascript">
   $(window).on('load resize',function(){
       if($(window).width() < 950){
-          window.location = "/catalogo-mobile.html"
+          window.location = "catalogo-mobile.html"
       }
   });
   </script>
