--- a/tabu-mobile.html
+++ b/tabu-mobile.html
@@ -30,7 +30,7 @@
   <script type="text/javascript">
   $(window).on('load resize',function(){
       if($(window).width() > 950){
-          window.location = "/tabu.html"
+          window.location = "tabu.html"
       }
   });
   </script>
