--- a/tabu.html
+++ b/tabu.html
@@ -27,7 +27,7 @@
   <script type="text/javascript">
   $(window).on('load resize',function(){
       if($(window).width() < 950){
-          window.location = "/tabu-mobile.html"
+          window.location = "tabu-mobile.html"
       }
   });
   </script>
