--- a/index-mobile.html
+++ b/index-mobile.html
@@ -27,7 +27,7 @@
   <script type="text/javascript">
   $(window).on('load resize',function(){
       if($(window).width() > 950){
-          window.location = "/index.html"
+          window.location = "index.html"
       }
   });
   </script>
