--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <script type="text/javascript">
   $(window).on('load resize',function(){
       if($(window).width() < 950){
-          window.location = "/index-mobile.html"
+          window.location = "index-mobile.html"
       }
   });
   </script>
