--- a/chi-siamo.html
+++ b/chi-siamo.html
@@ -192,9 +192,9 @@
     <div class="">
 
     </div>
-    <img class="facebook" src="/tabum/immagini/contatti/facebook.png">
-    <img class="mail" src="/tabum/immagini/contatti/mail.png">
-    <img class="insta" src="/tabum/immagini/contatti/insta.png">
+    <img class="facebook" src="immagini/contatti/facebook.png">
+    <img class="mail" src="immagini/contatti/mail.png">
+    <img class="insta" src="immagini/contatti/insta.png">
     <div class="">
       taBùm editore <br> Via G. Candiani, 72 <br>20158, Milano, MI
     </div>
