--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
 
   <meta charset="utf-8">
-  <meta name="viewport" width=device-width>
+  <meta name="viewport" content="width=device-width">
 
 
   <script src="gsap-public/minified/gsap.min.js"></script>
